[package]
authors = ["Cycan Technologies"]
edition = '2018'
name = 'pallet-esbind'
version = "0.1.0"
homepage = "https://cycan.network/"
repository = "https://github.com/CycanTech/Cycan/"
description = "bind etherum address and substrate address"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0'}
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
log = { version = "0.4.14", default-features = false }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-core = { version = "3.0.0", default-features = false }
sp-application-crypto = { version = "3.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-io = { version = "3.0.0", default-features = false }
pallet-evm = {version = "5.0.0", default-features = false, git = "https://github.com/CycanTech/frontier",branch = "v3" }
libsecp256k1 = { version = "0.6", default-features = false, features = ["hmac", "static-context"], optional = true }
sha3 = { version = "0.8", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { version = '3.0.0' }
sp-io = { version = '3.0.0' }
sp-runtime = { version = '3.0.0'  }
pallet-balances = { version = "3.0.0" }
pallet-timestamp = { version = "3.0.0" }
pallet-evm = {version = "5.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }
pallet-ethereum = {version = "3.0.0", git = "https://github.com/CycanTech/frontier",branch = "v3" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	"log/std",
	'sp-runtime/std',
	'sp-core/std',
	"sp-application-crypto/std",
	"serde",
	'sp-io/std',
	'pallet-evm/std',
	"libsecp256k1",
	"libsecp256k1/std",
	"sha3/std",
]

runtime-benchmarks = [
	"libsecp256k1",
	'frame-benchmarking',
]