[package]
authors = ["Cycan Technologies"]
description = 'Random GHOST-based Recursive ANcestor Deriving Prefix Agreement,based the Grandpa.By randomly selecting some validator nodes, the number of nodes participating in the consensus is reduced, and the effect of improving the efficiency of the network consensus is achieved.'
edition = '2018'
name = 'pallet-rgrandpa'
homepage = "https://cycan.network/"
repository = "https://github.com/CycanTech/Cycan/"
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
frame-support = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-std = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
log = { version = "0.4.14", default-features = false }
pallet-session = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-runtime = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-staking = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-application-crypto = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
serde = { version = "1.0.101", optional = true }
pallet-babe = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"  }
sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1", default-features = false }
pallet-grandpa = { default-features = false, git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"  }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = {  git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-io = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"  }
pallet-balances = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-timestamp = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-staking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-staking-reward-curve = {  git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
sp-staking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1"}
pallet-session = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1",features = ["historical"] }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	"log/std",
	'pallet-session/std',
	'sp-runtime/std',
	'sp-core/std',
	'pallet-staking/std',
	"sp-application-crypto/std",
	"serde",
	"pallet-babe/std",
	'sp-io/std',
	'pallet-grandpa/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
