[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-upgrade-test'
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0'}



[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	"serde",
]
