[package]
name = "phoenix"
version = "0.5.1"
authors = ["Cycan Technologies"]
description = "Phoenix Node"
edition = "2018"
build = "build.rs"
homepage = "https://cycan.network/"
repository = "https://github.com/CycanTech/Cycan/"

[[bin]]
name = "phoenix"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
serde_json = "1.0.64"

sp-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-blockchain = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-rpc-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-rpc = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
substrate-frame-rpc-system = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-transaction-payment-rpc = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-cli = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-core = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-executor = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-service = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-inherents = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-transaction-pool = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-transaction-pool = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-network = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-consensus-babe = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-consensus-babe = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-consensus-manual-seal = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-consensus = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-consensus = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-timestamp = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-evm = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
pallet-ethereum = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
pallet-dynamic-fee = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }

sc-finality-grandpa = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-finality-grandpa = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-client-api = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-runtime = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-basic-authorship = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-block-builder = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sc-telemetry = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
frame-benchmarking-cli = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
frame-benchmarking = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }


fc-consensus = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
fp-consensus = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }

phoenix-runtime = { path = "../../runtime/phoenix" }

fc-rpc = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
fp-rpc = {  git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
fc-rpc-core = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
fc-db = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }
fc-mapping-sync = { git = "https://github.com/CycanTech/frontier",branch = "v3.0.1" }


pallet-contracts  =  { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-contracts-rpc  =  { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
pallet-rgrandpa = { path = '../../frame/rgrandpa', version = '0.1.0' }
pallet-im-online = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }
sp-authority-discovery = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/CycanTech/substrate", branch = "v3.0.1" }

[features]
default = ["babe"]
babe = ["phoenix-runtime/babe"]
manual-seal = ["phoenix-runtime/manual-seal"]
runtime-benchmarks = [
	"phoenix-runtime/runtime-benchmarks",
]
