[package]
name = "phoenix"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2021"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
clap = { version = "3.0", features = ["derive"] }
futures = "0.3"
log = "0.4.8"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
serde = { version = "1.0.136", features = ["derive"] }

sp-api = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-core = { version = "5.0.0", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-runtime = { version = "5.0.0", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }

sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf"}
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }

fp-consensus = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
fp-rpc = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
fp-storage = { git = "https://github.com/CycanTech/frontier", branch = "v4" }

fc-consensus = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
fc-db = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
fc-mapping-sync = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
fc-rpc = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
fc-rpc-core = { git = "https://github.com/CycanTech/frontier", branch = "v4" }

pallet-base-fee = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
pallet-dynamic-fee = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
pallet-ethereum = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
pallet-evm = { git = "https://github.com/CycanTech/frontier", branch = "v4" }
sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
phoenix-runtime = { path = "../../runtime/phoenix", default-features = false, features = ["std"] }
pallet-contracts-rpc = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-consensus-babe-rpc = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-consensus-epochs = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-finality-grandpa-rpc = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
node-primitives = { version = "2.0.0", default-features = false, path = "../../primitives" }
sp-keystore = { version = "0.11.0", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sc-authority-discovery = { version = "0.10.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-authority-discovery = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }
sp-authorship = { version = "4.0.0-dev", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/CycanTech/substrate", rev = "4bc2af13cd81007a2a340d0333062179420d5daf" }

[features]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
	"phoenix-runtime/runtime-benchmarks",
]
